[gd_scene load_steps=14 format=3 uid="uid://2kb25sf4npl"]

[ext_resource type="Texture2D" uid="uid://rnepadpt3m54" path="res://Assets/Tileset/Tileset.png" id="1_1tfam"]
[ext_resource type="Script" path="res://Levels/nirodef/StateManager.gd" id="1_4v6g3"]
[ext_resource type="PackedScene" uid="uid://b11hooauu7282" path="res://Nodes/Player/Player.tscn" id="2_nq25h"]
[ext_resource type="PackedScene" uid="uid://7lv2lrua686t" path="res://Levels/nirodef/nir.tscn" id="4_o1vxj"]
[ext_resource type="Script" path="res://Levels/nirodef/arielushNIRlevel.gd" id="5_6tmuk"]
[ext_resource type="Texture2D" uid="uid://b5vbhsfmc6h7b" path="res://Assets/Mechanics/Father.png" id="5_n4coj"]
[ext_resource type="Texture2D" uid="uid://dshf4t57oydcb" path="res://Assets/Mechanics/Hand.png" id="6_a1nti"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xgs8j"]
texture = ExtResource("1_1tfam")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:1/0 = 0
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0
4:3/0 = 0
4:4/0 = 0
3:4/0 = 0
4:5/0 = 0
5:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:5/0 = 0
8:5/0 = 0
8:4/0 = 0
9:4/0 = 0
9:3/0 = 0
9:2/0 = 0
8:2/0 = 0
8:3/0 = 0
8:1/0 = 0
7:1/0 = 0
7:0/0 = 0
6:0/0 = 0
5:0/0 = 0
5:1/0 = 0
6:1/0 = 0
4:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:3/0 = 0
5:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:3/0 = 0
6:5/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_rrrk3"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_xgs8j")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71xp2"]
size = Vector2(25.0013, 517)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3l7c"]
size = Vector2(24.0025, 518)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76gby"]
size = Vector2(22.0006, 941)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkpge"]
size = Vector2(22.0006, 928.938)

[node name="nir_level" type="Node2D"]
script = ExtResource("1_4v6g3")

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2(6.10352e-05, 1.52588e-05)
tile_set = SubResource("TileSet_rrrk3")
format = 2
layer_0/tile_data = PackedInt32Array(196612, 1, 0, 196613, 65537, 0, 196614, 65537, 0, 196615, 65537, 0, 196616, 65537, 0, 196617, 65537, 0, 196618, 65537, 0, 196619, 65537, 0, 196620, 65537, 0, 196621, 65537, 0, 196622, 65537, 0, 196623, 65537, 0, 196624, 65537, 0, 196625, 65537, 0, 196626, 65537, 0, 196627, 65537, 0, 196628, 65537, 0, 196629, 65537, 0, 196630, 65537, 0, 196631, 65537, 0, 196632, 65537, 0, 196633, 65537, 0, 196634, 65537, 0, 196635, 65537, 0, 196636, 65537, 0, 196637, 65537, 0, 196638, 65537, 0, 196639, 131073, 0, 851981, 327681, 2, 786445, 327681, 4, 720909, 327681, 3, 655373, 327681, 2, 589837, 327681, 4, 524301, 327681, 3, 458765, 327681, 2, 393229, 327681, 4, 327693, 327681, 3, 262157, 327681, 3, 262156, 262145, 3, 262155, 393217, 3, 262154, 327681, 3, 262153, 262145, 3, 262152, 393217, 3, 262151, 327681, 3, 262150, 262145, 3, 262149, 393217, 3, 1114116, 1, 2, 327685, 196609, 0, 393221, 393217, 4, 458757, 393217, 2, 524293, 393217, 3, 589829, 393217, 4, 655365, 393217, 2, 720901, 393217, 3, 786437, 393217, 4, 851973, 393217, 2, 917509, 393217, 3, 983045, 393217, 4, 1048581, 393217, 2, 1114117, 65537, 2, 1114118, 65537, 2, 1048582, 393217, 1, 983046, 393217, 1, 917510, 262145, 3, 851974, 393217, 1, 786438, 393217, 1, 720902, 262145, 3, 655366, 393217, 1, 589830, 393217, 1, 524294, 262145, 3, 458758, 393217, 1, 393222, 393217, 1, 327686, 262145, 3, 327687, 327681, 3, 393223, 327681, 4, 458759, 327681, 2, 524295, 327681, 3, 589831, 327681, 4, 655367, 327681, 2, 720903, 327681, 3, 786439, 327681, 4, 851975, 327681, 2, 917511, 327681, 3, 983047, 327681, 4, 1048583, 327681, 2, 1114119, 65537, 2, 1114120, 65537, 2, 1048584, 196609, 0, 983048, 393217, 4, 917512, 393217, 3, 851976, 393217, 2, 786440, 393217, 4, 720904, 393217, 3, 655368, 393217, 2, 589832, 393217, 4, 524296, 393217, 3, 458760, 393217, 2, 393224, 393217, 4, 327688, 393217, 3, 327689, 262145, 3, 393225, 393217, 1, 458761, 393217, 1, 524297, 262145, 3, 589833, 393217, 1, 655369, 393217, 1, 720905, 196609, 0, 786441, 393217, 1, 851977, 196609, 0, 917513, 262145, 3, 983049, 393217, 1, 1048585, 393217, 1, 1114121, 65537, 2, 1114122, 65537, 2, 1048586, 327681, 2, 983050, 327681, 4, 917514, 327681, 3, 851978, 196609, 0, 786442, 327681, 4, 720906, 327681, 3, 655370, 327681, 2, 589834, 327681, 4, 524298, 327681, 3, 458762, 327681, 2, 393226, 327681, 4, 327690, 327681, 3, 327691, 393217, 3, 393227, 393217, 4, 458763, 393217, 2, 524299, 393217, 3, 589835, 393217, 4, 655371, 393217, 2, 720907, 393217, 3, 786443, 393217, 4, 851979, 393217, 2, 917515, 393217, 3, 983051, 393217, 4, 1048587, 393217, 2, 1114123, 65537, 2, 1114124, 65537, 2, 1048588, 393217, 1, 983052, 393217, 1, 917516, 196609, 0, 851980, 393217, 1, 786444, 393217, 1, 720908, 262145, 3, 655372, 393217, 1, 589836, 393217, 1, 524300, 262145, 3, 458764, 393217, 1, 393228, 393217, 1, 327692, 262145, 3, 917517, 327681, 3, 983053, 327681, 4, 1048589, 327681, 2, 1114125, 65537, 2, 1114126, 65537, 2, 1048590, 393217, 2, 983054, 393217, 4, 917518, 393217, 3, 851982, 393217, 2, 786446, 393217, 4, 720910, 393217, 3, 655374, 393217, 2, 589838, 393217, 4, 524302, 393217, 3, 458766, 393217, 2, 393230, 393217, 4, 327694, 393217, 3, 262158, 393217, 3, 262159, 262145, 3, 327695, 196609, 0, 393231, 393217, 1, 458767, 393217, 1, 524303, 262145, 3, 589839, 393217, 1, 655375, 393217, 1, 720911, 262145, 3, 786447, 393217, 1, 851983, 196609, 0, 917519, 196609, 0, 983055, 196609, 0, 1048591, 393217, 1, 1114127, 65537, 2, 1114128, 65537, 2, 1048592, 327681, 2, 983056, 327681, 4, 917520, 327681, 3, 851984, 196609, 0, 786448, 327681, 4, 720912, 327681, 3, 655376, 327681, 2, 589840, 327681, 4, 524304, 327681, 3, 458768, 327681, 2, 393232, 327681, 4, 327696, 327681, 3, 262160, 327681, 3, 262161, 393217, 3, 327697, 393217, 3, 393233, 393217, 4, 458769, 393217, 2, 524305, 393217, 3, 589841, 393217, 4, 655377, 393217, 2, 720913, 393217, 3, 786449, 393217, 4, 851985, 393217, 2, 917521, 393217, 3, 983057, 393217, 1, 1048593, 393217, 1, 1114129, 65537, 2, 1114130, 65537, 2, 1048594, 393217, 1, 983058, 393217, 1, 917522, 262145, 3, 851986, 393217, 1, 786450, 393217, 1, 720914, 262145, 3, 655378, 393217, 1, 589842, 393217, 1, 524306, 262145, 3, 458770, 393217, 1, 393234, 393217, 1, 327698, 262145, 3, 262162, 196609, 0, 262163, 196609, 0, 327699, 327681, 3, 393235, 327681, 4, 458771, 327681, 2, 524307, 327681, 3, 589843, 327681, 4, 655379, 196609, 0, 720915, 327681, 3, 786451, 327681, 4, 851987, 327681, 2, 917523, 327681, 3, 983059, 327681, 4, 1048595, 327681, 2, 1114131, 65537, 2, 1114132, 65537, 2, 1048596, 393217, 2, 983060, 393217, 4, 917524, 393217, 3, 851988, 393217, 2, 786452, 393217, 4, 720916, 393217, 3, 655380, 393217, 2, 589844, 393217, 4, 524308, 393217, 3, 458772, 393217, 2, 393236, 393217, 4, 327700, 393217, 3, 262164, 393217, 3, 262165, 196609, 0, 327701, 262145, 3, 393237, 393217, 1, 458773, 393217, 1, 524309, 262145, 3, 589845, 393217, 1, 655381, 393217, 1, 720917, 262145, 3, 786453, 393217, 1, 851989, 196609, 0, 917525, 262145, 3, 983061, 393217, 1, 1048597, 393217, 1, 1114133, 65537, 2, 1114134, 65537, 2, 1048598, 327681, 2, 983062, 327681, 4, 917526, 327681, 3, 851990, 196609, 0, 786454, 327681, 4, 720918, 327681, 3, 655382, 327681, 2, 589846, 327681, 4, 524310, 327681, 3, 458774, 327681, 2, 393238, 327681, 4, 327702, 327681, 3, 262166, 327681, 3, 262167, 393217, 3, 327703, 393217, 3, 393239, 393217, 4, 458775, 393217, 2, 524311, 393217, 3, 589847, 196609, 0, 655383, 393217, 2, 720919, 393217, 3, 786455, 393217, 4, 851991, 393217, 2, 917527, 393217, 3, 983063, 393217, 4, 1048599, 393217, 2, 1114135, 65537, 2, 1114136, 65537, 2, 1048600, 393217, 1, 983064, 393217, 1, 917528, 262145, 3, 851992, 393217, 1, 786456, 393217, 1, 720920, 262145, 3, 655384, 393217, 1, 589848, 393217, 1, 524312, 262145, 3, 458776, 393217, 1, 393240, 393217, 1, 327704, 262145, 3, 262168, 262145, 3, 262169, 327681, 3, 327705, 327681, 3, 393241, 327681, 4, 458777, 196609, 0, 524313, 327681, 3, 589849, 327681, 4, 655385, 327681, 2, 720921, 327681, 3, 786457, 327681, 4, 851993, 327681, 2, 917529, 327681, 3, 983065, 327681, 4, 1048601, 327681, 2, 1114137, 65537, 2, 1114138, 65537, 2, 1048602, 393217, 2, 983066, 393217, 4, 917530, 393217, 3, 851994, 393217, 2, 786458, 393217, 4, 720922, 393217, 3, 655386, 393217, 2, 589850, 393217, 4, 524314, 393217, 3, 458778, 393217, 2, 393242, 393217, 4, 327706, 393217, 3, 262170, 393217, 3, 262171, 262145, 3, 327707, 262145, 3, 393243, 196609, 0, 458779, 393217, 1, 524315, 262145, 3, 589851, 393217, 1, 655387, 393217, 1, 720923, 262145, 3, 786459, 393217, 1, 851995, 393217, 1, 917531, 196609, 0, 983067, 393217, 1, 1048603, 393217, 1, 1114139, 65537, 2, 1114140, 65537, 2, 1048604, 327681, 2, 983068, 327681, 4, 917532, 327681, 3, 851996, 327681, 2, 786460, 327681, 4, 720924, 327681, 3, 655388, 327681, 2, 589852, 327681, 4, 524316, 327681, 3, 458780, 327681, 2, 393244, 327681, 4, 327708, 327681, 3, 262172, 327681, 3, 262173, 196609, 0, 327709, 393217, 3, 393245, 393217, 4, 458781, 393217, 2, 524317, 393217, 3, 589853, 393217, 4, 655389, 393217, 2, 720925, 393217, 3, 786461, 393217, 4, 851997, 393217, 2, 917533, 393217, 3, 983069, 393217, 4, 1048605, 393217, 2, 1114141, 65537, 2, 1114142, 65537, 2, 1048606, 196609, 0, 983070, 196609, 0, 917534, 262145, 3, 851998, 393217, 1, 786462, 393217, 1, 720926, 262145, 3, 655390, 393217, 1, 589854, 393217, 1, 524318, 262145, 3, 458782, 393217, 1, 393246, 393217, 1, 327710, 262145, 3, 262174, 262145, 3, 262175, 131073, 1, 327711, 131073, 1, 393247, 131073, 1, 458783, 131073, 1, 524319, 131073, 1, 589855, 131073, 1, 655391, 131073, 1, 720927, 131073, 1, 786463, 131073, 1, 851999, 131073, 1, 917535, 131073, 1, 983071, 131073, 1, 1048607, 131073, 1, 1114143, 131073, 2, 262148, 1, 1, 327684, 1, 1, 393220, 1, 1, 458756, 1, 1, 524292, 1, 1, 589828, 1, 1, 655364, 1, 1, 720900, 1, 1, 786436, 1, 1, 851972, 1, 1, 917508, 1, 1, 983044, 1, 1, 1048580, 1, 1, 0, 1, 0, 65536, 1, 1, 131072, 1, 1, 1, 65537, 0, 65537, 327681, 3, 131073, 327681, 4, 2, 65537, 0, 65538, 393217, 3, 131074, 196609, 0, 3, 65537, 0, 65539, 65537, 1, 131075, 65537, 1, 4, 65537, 0, 65540, 65537, 1, 131076, 65537, 1, 5, 65537, 0, 65541, 65537, 1, 131077, 65537, 1, 196611, 65537, 1, 262147, 65537, 1, 327683, 65537, 1, 786464, 65537, 1, 852000, 65537, 1, 917536, 65537, 1, 983072, 65537, 1, 1048608, 65537, 1, 1114144, 65537, 1, 1179678, 65537, 1, 1245214, 65537, 2, 1179679, 65537, 1, 1245215, 65537, 2, 1179680, 65537, 1, 1245216, 65537, 2, 1179681, 393217, 1, 1245217, 65537, 2, 1179682, 327681, 4, 1245218, 65537, 2, 1179683, 131073, 1, 1245219, 131073, 2, 983073, 65537, 1, 1048609, 65537, 1, 1114145, 262145, 3, 983074, 327681, 4, 1048610, 196609, 0, 1114146, 327681, 3, 983075, 131073, 1, 1048611, 131073, 1, 1114147, 131073, 1, 196608, 1, 1, 196609, 327681, 2, 196610, 393217, 2, 262144, 1, 1, 327680, 1, 1, 393216, 1, 1, 262145, 327681, 3, 327681, 327681, 3, 393217, 196609, 0, 262146, 393217, 3, 327682, 393217, 3, 393218, 393217, 1, 458752, 1, 1, 524288, 1, 1, 589824, 1, 1, 458753, 327681, 2, 524289, 327681, 3, 589825, 327681, 4, 458754, 393217, 2, 524290, 393217, 3, 589826, 393217, 4, 655360, 1, 1, 720896, 1, 1, 786432, 1, 1, 655361, 327681, 2, 720897, 327681, 3, 786433, 327681, 4, 655362, 393217, 2, 720898, 393217, 3, 786434, 393217, 4, 851968, 1, 1, 917504, 1, 1, 983040, 1, 1, 851969, 196609, 0, 917505, 327681, 3, 983041, 196609, 0, 851970, 393217, 2, 917506, 393217, 3, 983042, 393217, 4, 1048576, 1, 1, 1114112, 1, 1, 1179648, 1, 1, 1048577, 327681, 2, 1114113, 327681, 3, 1179649, 196609, 0, 1048578, 393217, 2, 1114114, 393217, 3, 1179650, 393217, 4, 1245184, 1, 2, 1245185, 65537, 2, 1245186, 65537, 2, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 655363, 65537, 1, 720899, 65537, 1, 786435, 65537, 1, 851971, 65537, 1, 917507, 65537, 1, 983043, 65537, 1, 1048579, 65537, 1, 1114115, 65537, 1, 1179651, 65537, 1, 1179652, 65537, 1, 1179653, 65537, 1, 1245187, 65537, 2, 1245188, 65537, 2, 1245189, 65537, 2, 65542, 65537, 1, 131078, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 1179654, 65537, 1, 1179655, 65537, 1, 1179656, 65537, 1, 1245190, 65537, 2, 1245191, 65537, 2, 1245192, 65537, 2, 65545, 65537, 1, 131081, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, 1179657, 65537, 1, 1179658, 65537, 1, 1179659, 65537, 1, 1245193, 65537, 2, 1245194, 65537, 2, 1245195, 65537, 2, 65548, 65537, 1, 131084, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 1179660, 65537, 1, 1179661, 65537, 1, 1179662, 65537, 1, 1245196, 65537, 2, 1245197, 65537, 2, 1245198, 65537, 2, 65551, 65537, 1, 131087, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 1179663, 65537, 1, 1179664, 65537, 1, 1179665, 65537, 1, 1245199, 65537, 2, 1245200, 65537, 2, 1245201, 65537, 2, 65554, 65537, 1, 131090, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 65556, 65537, 1, 131092, 65537, 1, 1179666, 65537, 1, 1179667, 65537, 1, 1179668, 65537, 1, 1245202, 65537, 2, 1245203, 65537, 2, 1245204, 65537, 2, 65557, 65537, 1, 131093, 65537, 1, 65558, 65537, 1, 131094, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 1179669, 65537, 1, 1179670, 65537, 1, 1179671, 65537, 1, 1245205, 65537, 2, 1245206, 65537, 2, 1245207, 65537, 2, 65560, 65537, 1, 131096, 65537, 1, 65561, 65537, 1, 131097, 65537, 1, 65562, 65537, 1, 131098, 65537, 1, 1179672, 65537, 1, 1179673, 65537, 1, 1179674, 65537, 1, 1245208, 65537, 2, 1245209, 65537, 2, 1245210, 65537, 2, 65563, 65537, 1, 131099, 65537, 1, 65564, 65537, 1, 131100, 65537, 1, 65565, 65537, 1, 131101, 65537, 1, 1179675, 65537, 1, 1179676, 65537, 1, 1179677, 65537, 1, 1245211, 65537, 2, 1245212, 65537, 2, 1245213, 65537, 2, 65566, 65537, 1, 131102, 65537, 1, 65567, 65537, 1, 131103, 65537, 1, 65568, 65537, 1, 131104, 65537, 1, 196640, 65537, 1, 262176, 65537, 1, 327712, 65537, 1, 393248, 65537, 1, 458784, 65537, 1, 524320, 65537, 1, 589856, 65537, 1, 655392, 65537, 1, 720928, 65537, 1, 65569, 196609, 0, 131105, 393217, 1, 196641, 196609, 0, 65570, 327681, 3, 131106, 327681, 4, 196642, 327681, 2, 65571, 131073, 1, 131107, 131073, 1, 196643, 131073, 1, 262177, 262145, 3, 327713, 262145, 3, 393249, 393217, 1, 262178, 327681, 3, 327714, 327681, 3, 393250, 327681, 4, 262179, 131073, 1, 327715, 131073, 1, 393251, 131073, 1, 458785, 393217, 1, 524321, 196609, 0, 589857, 65537, 1, 458786, 327681, 2, 524322, 327681, 3, 589858, 327681, 4, 458787, 131073, 1, 524323, 131073, 1, 589859, 131073, 1, 655393, 65537, 1, 720929, 65537, 1, 786465, 65537, 1, 655394, 327681, 2, 720930, 327681, 3, 786466, 327681, 4, 655395, 131073, 1, 720931, 131073, 1, 786467, 131073, 1, 852001, 65537, 1, 917537, 65537, 1, 852002, 327681, 2, 917538, 327681, 3, 852003, 131073, 1, 917539, 131073, 1, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 16, 65537, 0, 17, 65537, 0, 18, 65537, 0, 19, 65537, 0, 20, 65537, 0, 21, 65537, 0, 22, 65537, 0, 23, 65537, 0, 24, 65537, 0, 25, 65537, 0, 26, 65537, 0, 27, 65537, 0, 28, 65537, 0, 29, 65537, 0, 30, 65537, 0, 31, 65537, 0, 32, 65537, 0, 33, 65537, 0, 34, 65537, 0, 35, 131073, 0)

[node name="PlayerBoundary" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="Left" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(117, 333.5)
shape = SubResource("RectangleShape2D_71xp2")

[node name="Right" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(1034, 335)
shape = SubResource("RectangleShape2D_f3l7c")

[node name="Up" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(574.5, 86.9997)
rotation = 1.57079
shape = SubResource("RectangleShape2D_76gby")

[node name="Down" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(571.531, 583)
rotation = 1.57079
shape = SubResource("RectangleShape2D_kkpge")

[node name="nir" parent="." instance=ExtResource("4_o1vxj")]
position = Vector2(159, 541)

[node name="arielush" parent="." instance=ExtResource("2_nq25h")]
position = Vector2(575, 322)
script = ExtResource("5_6tmuk")

[node name="speed_on_dash" type="Timer" parent="arielush"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="cooldown" type="Timer" parent="arielush"]
wait_time = 3.0
one_shot = true

[node name="FatherCanvas" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="FatherCanvas"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = 151.0
offset_right = 24.0
offset_bottom = 191.0
grow_horizontal = 0
rotation = 3.14159
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Father" type="Sprite2D" parent="FatherCanvas/Control"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(20.9999, 55)
rotation = 2.35619
scale = Vector2(1.6, 1.6)
texture = ExtResource("5_n4coj")

[node name="Hand" type="Sprite2D" parent="FatherCanvas/Control/Father"]
position = Vector2(-40, 40)
texture = ExtResource("6_a1nti")

[node name="Hand2" type="Sprite2D" parent="FatherCanvas/Control/Father"]
position = Vector2(40, 40)
texture = ExtResource("6_a1nti")
flip_h = true

[connection signal="timeout" from="arielush/speed_on_dash" to="arielush" method="_on_speed_on_dash_timeout"]
[connection signal="timeout" from="arielush/cooldown" to="arielush" method="_on_cooldown_timeout"]
